--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ivan Chamovski | CV</title>
     <link rel="stylesheet" href="./style.css" />
+    <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/3135/3135686.png" type="image/x-icon">
   </head>
   <body>
     <div class="container">
